# Findlay_et_al_2024a

./: .gitignore  CompConsc3.yml  CompConsc4.yaml  MeasureDebugging.ipynb  PQR_3.0.ipynb  PQR_4.0.ipynb  README.md  environment.yml  pyproject.toml
findlay2024a/: README.md  __init__.py  divided_clock_computer.py  findlay2024a.py  pub_theme.py  pyproject.toml  time_theme.py
findlay2024a/src/findlay2024a/: __init__.py  divided_clock_computer.py  findlay2024a.py  pub_theme.py
notebooks/: Figure1.ipynb  Figure3.ipynb  Figure5.ipynb  Figure8.ipynb  Figure9.ipynb  FigureS0.ipynb  FigureS1.ipynb  check_simulation.ipynb  dcc_checker.ipynb  fonts.ipynb  pyphi_config.yml  wxyz_cycles.ipynb
