[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "findlay2024a"
version = "0.0.1"
authors = [
  { name="Graham Findlay", email="gfindlay@wisc.edu" },
]
description = "Code to accompany Findlay et al. 2024a: Dissociating Artificial Intelligence from Artificial Consciousness"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/grahamfindlay/Findlay_et_al_2024a"
