[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "findlay2024a"
version = "0.0.1"
authors = [
  { name="Graham Findlay", email="gfindlay@wisc.edu" },
]
description = "Code to accompany Findlay et al. 2024a: Dissociating Artificial Intelligence from Artificial Consciousness"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyphi[visualize] @ git+https://github.com/wmayner/pyphi.git@feature/iit-4.0",
  "graphiit @ git+https://github.com/CSC-UW/graphiit.git@feature/iit-4.0",
  "jupyter",
  "matplotlib",
  "numpy",
  "tqdm"
]

[project.urls]
Homepage = "https://github.com/grahamfindlay/Findlay_et_al_2024a"

[tool.setuptools]
packages.find.include = ["findlay2024a"]
packages.find.exclude = ["notebooks"]